Set current path

--- a/3move/CMakeLists.txt
+++ b/3move/CMakeLists.txt
@@ -2,10 +2,12 @@ set(TARGET_NAME move)
 
 set(Sources
     ./main.cpp
+    ../common/src/utils.cpp
 )
 
 set(Includes
     ../${IncludeDir}/olcPixelGameEngine.h
+    ../${IncludeDir}/utils.h
 )
 
 add_executable(${TARGET_NAME}
