--- a/2maze/CMakeLists.txt
+++ b/2maze/CMakeLists.txt
@@ -13,7 +13,7 @@
 #
 #   MIT License
 #
-set(TARGET_NAME 1pal)
+set(TARGET_NAME 2maze)
 
 set(main
     ../common/main/Application.cpp
@@ -41,5 +41,4 @@ add_executable(${TARGET_NAME}
     ${utility}
 )
 
-target_link_libraries(1pal ${ALLEGRO_LIBRARIES})
-
+target_link_libraries(2maze ${ALLEGRO_LIBRARIES})
